# Password_Manager

./: .gitignore  Cargo.toml  README.md  gitignore
examples/: argon_test.rs  encryption_test.rs  sqlite_test.rs
src/: main.rs
src/backend/: crypto.rs  db.rs  error.rs  mod.rs
src/frontend/: mod.rs  ui_temp.rs
