[package]
name = "password_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
crossterm = "0.29.0"
directories = "6.0.0"
hkdf = "0.12.4"
inquire = "0.9.1"
libc = "0.2.180"
rand = "0.9.2"
rusqlite = "0.38.0"
secrecy = "0.10.3"
serde = "1.0.228"
sha2 = "0.10.9"
subtle = "2.6.1"
time = "0.3.46"
toml = "0.9.10"
uuid = "1.19.0"
zeroize = "1.8.2"
